ratingsboard/manifests/base/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ratingsboard
  labels:
    app.kubernetes.io/part-of: ratingsboard
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: restricted
